CMAKE_MINIMUM_REQUIRED(VERSION 1.5)
PROJECT(CTEST CXX)

SUBDIRS(Curl)

FIND_LIBRARY(CMAKE_LIBRARY NAMES CMakeLib PATHS 
             ${CTEST_BINARY_DIR}/..)

SET(CTEST_SRCS
    ../ctest.cxx
    ../cmCTest.cxx
    cmCTestSubmit.cxx)

INCLUDE_DIRECTORIES(${CTEST_SOURCE_DIR}/..)

ADD_DEFINITIONS(-DHAVE_CURL)
ADD_EXECUTABLE(ctest ${CTEST_SRCS})
TARGET_LINK_LIBRARIES(ctest ${CMAKE_LIBRARY} Curl)