SOURCE_FILES(SRCS
CMakeSetupGUIImplementation.cxx
FLTKDialog.cxx
FLTKPropertyItemRow.cxx
FLTKPropertyList.cxx
)

SOURCE_FILES(FLTK_GUI_Files_SRCS
CMakeSetupGUI.fl
)


LINK_LIBRARIES(${FLTK_LIBRARY})
IF(WIN32)
 IF(NOT UNIX)
   LINK_LIBRARIES(wsock32)
 ENDIF(NOT UNIX)
ENDIF(WIN32)


IF(UNIX)
  INCLUDE (${CMAKE_ROOT}/Modules/FindOpenGL.cmake)
  LINK_LIBRARIES(${OPENGL_LIBRARY})
ENDIF(UNIX)

INCLUDE_DIRECTORIES(${FLTK_INCLUDE_PATH})


ADD_EXECUTABLE(CMakeSetup SRCS)
FLTK_WRAP_UI(CMakeSetup FLTK_GUI_Files_SRCS)

INSTALL_TARGETS (/bin CMakeSetup)

IF(CMAKE_HAS_X)
LINK_LIBRARIES(-lXt -lm)
LINK_LIBRARIES(${CMAKE_X_LIBS})
ADD_DEFINITIONS(${CMAKE_X_CFLAGS})
ENDIF(CMAKE_HAS_X)
